--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -9,10 +9,12 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<a href="/">Home</a>
+    <body>
+        <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href="/blog/">Blog</a>
-	<body>
-		<h1>Astro</h1>
-	</body>
+        <h1>Blog</h1>
+        <h1>My Astro Learning Blog</h1>
+        <p>This is where I will post about my journey learning Astro.</p>
+      </body>
 </html>
